--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1 style="text-align:center">HELLO 二狗子，你妈的不是人啊！！！！</h1>
-<img src="http://img3.imgtn.bdimg.com/it/u=82985096,3807292249&fm=21&gp=0.jpg" style="display:block;margin:10px auto;">
+<img src="https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=298213989,180150006&fm=116&gp=0.jpg" style="display:block;margin:10px auto;">
